--- a/.env_sample
+++ b/.env_sample
@@ -1,3 +1,4 @@
 MY_PORT = YOUR_PORT_HERE
 MONGO_CONNECTION_URL = YOUR_URL_HERE
 JWT_SECRET = YOUR_JWT_SECRET_HERE
+FIREBASE_SERVER_KEY = YOUR_FIREBASE_SERVER_KEY_HERE
