--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.7",
     "mongoose": "^5.9.11",
-    "nodemon": "^2.0.3"
+    "nodemon": "^2.0.3",
+    "socket.io": "^2.3.0",
+    "socketio-jwt": "^4.6.2"
   },
   "devDependencies": {
     "mocha": "^7.1.2"
