--- a/package.json
+++ b/package.json
@@ -4,19 +4,41 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "watch": "nodemon app.js"
+    "watch": "nodemon app.js",
+    "build-babel": "babel react_src/app.js --out-file=public/scripts/app.js --presets=env,react",
+    "build": "webpack"
   },
   "dependencies": {
+    "@babel/cli": "^7.12.10",
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-react": "^7.12.10",
+    "babel-loader": "^8.2.2",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
+    "css-loader": "^0.28.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-history-api-fallback": "^2.2.1",
     "fcm-node": "^1.5.2",
     "mongodb": "^3.5.7",
     "mongoose": "^5.9.11",
+    "node-sass": "^5.0.0",
     "nodemon": "^2.0.3",
-    "socket.io": "^2.3.0"
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-modal": "^3.12.1",
+    "react-redux": "^7.2.2",
+    "react-router-dom": "^4.2.2",
+    "redux": "^4.0.5",
+    "sass-loader": "^10.1.0",
+    "socket.io": "^2.3.0",
+    "style-loader": "^0.18.2",
+    "webpack": "^5.11.0",
+    "webpack-cli": "^4.2.0"
   },
   "devDependencies": {
     "mocha": "^7.1.2"
