--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
+    "axios": "^0.21.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "css-loader": "^0.28.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -34,6 +36,7 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^4.2.2",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "sass-loader": "^10.1.0",
     "socket.io": "^2.3.0",
     "style-loader": "^0.18.2",
