more react stuff

--- a/package.json
+++ b/package.json
@@ -27,16 +27,17 @@
     "express": "^4.17.1",
     "express-history-api-fallback": "^2.2.1",
     "fcm-node": "^1.5.2",
+    "materialize-css": "^1.0.0-rc.2",
     "mongodb": "^3.5.7",
     "mongoose": "^5.9.11",
     "node-sass": "^5.0.0",
     "nodemon": "^2.0.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-materialize": "^3.9.5",
     "react-modal": "^3.12.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^4.3.1",
-    "react-uuid": "^1.0.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "sass-loader": "^10.1.0",
