--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "scripts": {
     "start": "node app.js",
     "watch": "nodemon app.js",
-    "build-babel": "babel react_src/app.js --out-file=public/scripts/app.js --presets=env,react",
-    "build": "webpack"
+    "build:dev": "webpack",
+    "build:prod": "webpack --mode=production --env production",
+    "heroku-postbuild": "npm run build:prod"
+
   },
   "dependencies": {
     "@babel/cli": "^7.12.10",
